<resources>
    <string name="app_name">Exemplo</string>
    <string name="txt_somar">Somar</string>
    <string name="txt_janela">Janela</string>
    <string name="txt_TipCalc">TipCalc</string>
    <string name="txt_valor">Valor:</string>
    <string name="txt_gorjeta">Gorjeta:</string>
    <string name="txt_total">Total:</string>
    <string name="txt_desenho">Desenho</string>
    <string name="txt_re">RE:</string>
    <string name="txt_nome">Nome:</string>
    <string name="txt_salario">Salário:</string>
    <string name="txt_dataadmissao">Data de Admissão</string>
    <string name="txt_cargo">Cargo:</string>
    <string name="txt_cadastrar">Cadastrar</string>
    <string name="txt_listar">Listar</string>
</resources>